poc-ping-loki/depoyments/app-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: observabilidad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user-container
          image: user-service:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "18m"
              memory: "16Mi"
