poc-ping-loki/depoyments/app-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: observabilidad
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
