poc-ping-loki/depoyments/app-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /random_sleep
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
